fix tooltip issue by increasing z-index of popup

--- a/client/play/css/main.scss
+++ b/client/play/css/main.scss
@@ -128,9 +128,18 @@
   margin-left: 50px;
 }
 
+.ui-dialog {
+  z-index: 5000 !important;
+}
+
 //=====================================
 #chart {
   position: fixed;
+}
+
+.popover {
+  width: 350px;
+  max-width: 350px;
 }
 
 /*
